# deep_researcher

./: .gitignore  CLAUDE.md  handoff.md  handoff_sil.md  langgraph_harness_guide.md  pyproject.toml
data/crimson_desert/: game_info.md  rtx3080_settings.md
data/nuri_rocket/: nuri_info.md
data/quest_pro/: quest_pro_info.md
data/sample_sources/: battery_supply_chain.txt  electric_vehicles_market.md  ev_policy.md
data/xuantie_c910/: xuantie_info.md
failures/: run_3a974008.json  run_7c3e22a1.json  run_b0e6d3bd.json  run_c7f76f37.json  run_fbfec37e.json
metrics/: run_73c1a565.json  sil_report_1774798859.json  sil_report_1774806096.json  sil_report_1774810918.json  sil_report_1774812970.json  sil_report_1774820118.json  sil_report_1774850265.json  sil_report_1774880108.json
scripts/: self_improvement_harness.py  test_run.py  test_run_no_kb.py
sessions/run_32b10fed/: knowledge_base.json
sessions/run_3a974008/: config.json  failure.json  input_guardrail.json  session.json  traces.json
sessions/run_73c1a565/: checkpoint.json  evaluation.json  input_guardrail.json  output_guardrail.json  result.md  session.json  traces.json
sessions/run_7c3e22a1/: failure.json  session.json  traces.json
src/harness/: __init__.py  (+14 more)
tests/: conftest.py  test_base.py  test_checkpointer.py  test_config_store.py  test_e2e_lmstudio.py  test_e2e_session.py  test_guardrails.py  test_knowledge_base.py  test_models.py  test_online_evaluator.py  test_research_scenarios.py  test_sanitizer.py  test_self_improvement.py  test_session_store.py  test_web_search.py  test_zero_hallucination.py
(+112 files in other folders)
